@@ -9,4 +9,4 @@ FROM --platform=$TARGETPLATFORM eclipse-temurin:17
 WORKDIR /workdir
 COPY --from=build /workdir/build/libs/osrs-pathfinder-service-2-*-all.jar /bindir/service.jar
 EXPOSE 8080
-CMD ["java", "-jar", "/bindir/service.jar"]
+CMD ["java", "-XX:+UseZGC", "-jar", "/bindir/service.jar"]
